# face_detect

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: AnimatedGIF.h.23B589D52A033021.idx  DOG.c.E0AE0FEFD7F8DF3F.idx  EVE_commands.c.25EC63B74EF8B6BE.idx  EVE_supplemental.c.81D7181490B5F9B1.idx  adc_button.c.38B50FC2D73FEA58.idx  adc_button.h.1E0FB78D4D5BCB53.idx  animimg001.c.42F0EA9CC25EAB91.idx  animimg002.c.33B63281480DC552.idx  animimg003.c.6684FB7C4FD6A623.idx  audio.c.4B54F52397590C25.idx  audio.h.BECEB5D8AD07BC71.idx  audio_codec_ctrl_i2c.c.40D90E26F8151526.idx  audio_codec_ctrl_if.h.CF31C2BC35CA3111.idx  audio_codec_ctrl_spi.c.C6AC86DE3B532468.idx  audio_codec_data_i2s.c.520AE90E9A156657.idx  audio_codec_data_if.h.DD1D8E28C1AD98DB.idx  audio_codec_gpio.c.05D473C4A5C7E2C6.idx  audio_codec_gpio_if.h.250D412F1A1D70A5.idx  audio_codec_if.h.15F4BBE5CCE3AB41.idx  audio_codec_sw_vol.c.A1A7E65A54281E01.idx  audio_codec_sw_vol.h.A96E9EB4DCE2DCFF.idx  audio_codec_vol_if.h.9AA2B05E19D57FE7.idx  audio_decoder_reg.c.08BA4A6E2F030D27.idx  (+1508 more)
main/: CMakeLists.txt  hello_world_main.cpp  idf_component.yml  main.cpp
main/bsp/: DOG.c  YY.c  adc_button.c  adc_button.h  audio.c  audio.h  camera.c  camera.h  lcd.c  lcd.h  lvgl_lcd.c  lvgl_lcd.h
main/face/: who_ai_utils.cpp  who_ai_utils.hpp  who_human_face_detection.cpp  who_human_face_detection.hpp  who_human_face_recongnition.c  who_human_face_recongnition.cpp  who_human_face_recongnition.h  who_human_face_recongnition.hpp
main/sd_card/: sd_card.c  sd_card.h
(+10 files in other folders)
